@@ -1,9 +1,5 @@
 module ActionView
   class TemplateHandler
-    def self.line_offset
-      0
-    end
-
     def self.compilable?
       false
     end
@@ -20,10 +16,6 @@ module ActionView
 
     def compilable?
       self.class.compilable?
-    end
-
-    def line_offset
-      self.class.line_offset
     end
 
     # Called by CacheHelper#cache
